# beam4school-proposal

./: BL4S_Proposal_v4.md  Dockerfile  Jeremias_BarridodeMomentum.YAML  Makefile  PROPOSAL.md
.github/workflows/: build-pdf.yml  geant4-simulate.yml  highland-predict.yml
analysis/: analyze_geant4.py  highland_calculator.py
data/: materials_database.json
docs/: BeamScan_Physics_Deep_Dive.md  CI_GEANT4.md  SIMULATION_PLAN.md  index.html
docs/proposal/: BL4S_2026_BeamScan_FINAL_v3.docx  BL4S_2026_BeamScan_v4.docx  BL4S_Proposal_FINAL_v3.md  BL4S_Proposal_v4.md
docs/slides/: BeamScan-Overview.marp.md  BeamScan-TechDeep.marp.md
requests/: Agustina_add thickness scan experiment - PE, PVC, SiO2  Agustina_heritage_fingerprint.yaml  artifact_mineral_scan.yaml  arturo_heritage_study.yaml  auth_compare.yaml  bustillo_PEvsPVC.yaml  comechingones_material_analysis.yaml  federico_PEvsPVC.yaml  lorenzo_caco3_thickness_momentum_scan.yaml  maia_mummy.yaml  modern-vs-ancient.yaml  paula_quartz.yaml  paula_quartz_vs_lead.yaml  template.yaml
results/Agustina_heritage_fingerprint/: SUMMARY.md  predictions.csv
results/Agustina_thickness_scan/: SUMMARY.md  predictions.csv
results/artifact_mineral_scan/: SUMMARY.md  predictions.csv
results/arturo_heritage_study/: SUMMARY.md  predictions.csv
results/comechingones_material_analysis/: SUMMARY.md  predictions.csv
scripts/: generate_macros.py  pseudo_mc.py
simulation/: CMakeLists.txt  beamscan.cc
simulation/include/: ActionInitialization.hh  RunAction.hh
simulation/src/: DetectorConstruction.cc  RunAction.cc
(+23 files in other folders)
